--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPA</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="mains.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=072ef320-b6f8-4ba7-863e-dc9e7f6b7105&lang=ru_RU" type="text/javascript"></script>
 
 
