--- a/home.html
+++ b/home.html
@@ -60,56 +60,56 @@
                     </a>
                 </div>
             </div>
-            <div class="navigation">
+            <nav class="navigation">
                 <div class="navigation_row">
                     <p>Navigation</p>
                     <img src="./img/Chevron.svg" alt="Chevron Up">
                 </div>
-                <div class="navigation_menu">
-                    <div class="menu_row">
+                <ul class="navigation_menu">
+                    <li class="menu_row">
                         <div class="menu_row--right">
                             <img src="./img/Person.svg" alt="Person">
                             <a href="#">My profile</a>
                         </div>
-                    </div>
-                    <div class="menu_row">
+                    </li>
+                    <li class="menu_row">
                         <div class="menu_row--right">
                             <img src="./img/Finance.svg" alt="Finance">
                             <a href="#">Balance</a>
                         </div>
                         <span class="cash">$ 1,430</span>
-                    </div>
-                    <div class="menu_row">
+                    </li>
+                    <li class="menu_row">
                         <div class="menu_row--right">
                             <img src="./img/Scheme.svg" alt="Scheme">
                             <a href="#">Connections</a>
                         </div>
                         <span class="bg bg_red">29</span>
-                    </div>
-                    <div class="menu_row">
+                    </li>
+                    <li class="menu_row">
                         <div class="menu_row--right">
                             <img src="./img/People.svg" alt="People">
                             <a href="#">Friends</a>
                         </div>
-                    </div>
-                </div>
-                <div class="navigation_bottom">
-                    <div class="bottom_row">
+                    </li>
+                </ul>
+                <ul class="navigation_bottom">
+                    <li class="bottom_row">
                         <div class="menu_row--right">
                             <img src="./img/Calendar.svg" alt="Scheme">
                             <a href="#">Events</a>
                         </div>
                         <span class="bg bg_green">45</span>
-                    </div>
-                    <div class="bottom_row">
+                    </li>
+                    <li class="bottom_row">
                         <div class="menu_row--right">
                             <img src="./img/Settings.svg" alt="People">
                             <a href="#">Account settings</a>
                         </div>
 
-                    </div>
-                </div>
-            </div>
+                    </li>
+                </ul>
+            </nav>
             <div class="thoughts">
                 <div class="thoughts_row ">
                     <p>Share your thoughts</p>
