--- a/map.html
+++ b/map.html
@@ -7,10 +7,10 @@
                     <img src="./img/Chevron.svg" alt="Chevron">
                 </button>
                 <button id="resetBtn" class="">
-                    <img src="./img/Update.svg" alt="Chevron">
+                    <img src="./img/Update.svg" alt="ChevUpdateron">
                 </button>
                 <button class="">
-                    <img src="./img/Close.svg" alt="Chevron">
+                    <img src="./img/Close.svg" alt="Close">
                 </button>
             </div>
         </div>
