--- a/timer.html
+++ b/timer.html
@@ -3,14 +3,14 @@
         <div class="timer_top">
             <p>Timer</p>
             <div class="timer_control">
-                <button class="startBtn">
+                <button>
                     <img src="./img/Chevron.svg" alt="Chevron">
                 </button>
-                <button id="resetBtn" class="">
-                    <img src="./img/Update.svg" alt="Chevron">
+                <button>
+                    <img src="./img/Update.svg" alt="Update">
                 </button>
-                <button class="">
-                    <img src="./img/Close.svg" alt="Chevron">
+                <button>
+                    <img src="./img/Close.svg" alt="Close">
                 </button>
             </div>
         </div>
